--- a/GUI/CalibrateTaskWindow.xaml
+++ b/GUI/CalibrateTaskWindow.xaml
@@ -62,6 +62,7 @@
                                 </StackPanel>
                             </StackPanel>
                         </Grid>
+                        <CheckBox x:Name="conserveMemoryCheckBox" Content="Conserve memory (might be slow)" />
                     </StackPanel>
                 </Expander>
             </GroupBox>
