--- a/GUI/SearchTaskWindow.xaml
+++ b/GUI/SearchTaskWindow.xaml
@@ -126,6 +126,10 @@
                                 </StackPanel>
                             </Expander>
                         </GroupBox>
+                        <StackPanel Orientation="Horizontal" Margin="5">
+                            <Label x:Name="ff" Content="MaxDegreeOfParallelism" />
+                            <TextBox x:Name="maxDegreesOfParallelism" Width="45"/>
+                        </StackPanel>
                     </StackPanel>
                 </Expander>
             </GroupBox>
