--- a/GUI/CalibrateTaskWindow.xaml
+++ b/GUI/CalibrateTaskWindow.xaml
@@ -9,7 +9,7 @@
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <StackPanel>
             <GroupBox Header="Search Parameters" DockPanel.Dock="Top">
-                <Expander x:Name="SearchModeExpander" Collapsed="ApmdExpander_Collapsed">
+                <Expander x:Name="SearchModeExpander">
                     <StackPanel>
                         <StackPanel Orientation="Horizontal" Margin="5">
                             <Label x:Name="precursorMassToleranceLabel" Content="Precursor Mass Tolerance" />
@@ -71,7 +71,7 @@
                 </Expander>
             </GroupBox>
             <GroupBox Header="Modifications" DockPanel.Dock="Top">
-                <Expander x:Name="ModExpander" Collapsed="ApmdExpander_Collapsed" Expanded="ModExpander_Expanded">
+                <Expander x:Name="ModExpander">
                     <Expander.Style>
                         <Style TargetType="Expander">
                             <Setter Property="Header" Value="{Binding ModExpanderTitle}" />
@@ -162,7 +162,7 @@
                 </Expander>
             </GroupBox>
             <GroupBox Header="Calibration Parameters" DockPanel.Dock="Top">
-                <Expander x:Name="CalibrationExpander" Collapsed="ApmdExpander_Collapsed">
+                <Expander x:Name="CalibrationExpander">
                     <StackPanel>
                         <CheckBox x:Name="nonLinearCalibCheckBox" Content="Non-Linear Calibration" />
                     </StackPanel>
