--- a/GUI/GPTMDTaskWindow.xaml
+++ b/GUI/GPTMDTaskWindow.xaml
@@ -14,7 +14,7 @@
         <ScrollViewer VerticalScrollBarVisibility="Auto">
             <DockPanel>
                 <GroupBox Header="Search Parameters" DockPanel.Dock="Top">
-                    <Expander x:Name="SearchModeExpander" Collapsed="ApmdExpander_Collapsed">
+                    <Expander x:Name="SearchModeExpander">
                         <StackPanel>
                             <StackPanel Orientation="Horizontal" Margin="5">
                                 <Label x:Name="precursorMassToleranceLabel" Content="Precursor Mass Tolerance" />
@@ -76,7 +76,7 @@
                     </Expander>
                 </GroupBox>
                 <GroupBox Header="Modifications" DockPanel.Dock="Top">
-                    <Expander x:Name="ModExpander" Collapsed="ApmdExpander_Collapsed" Expanded="ModExpander_Expanded" IsExpanded="False">
+                    <Expander x:Name="ModExpander" IsExpanded="False">
                         <Expander.Style>
                             <Style TargetType="Expander">
                                 <Setter Property="Header" Value="{Binding ModExpanderTitle}" />
