--- a/GUI/SearchTaskWindow.xaml
+++ b/GUI/SearchTaskWindow.xaml
@@ -134,7 +134,7 @@
                 </Expander>
             </GroupBox>
             <GroupBox Header="Modifications" DockPanel.Dock="Top">
-                <Expander x:Name="ModExpander" Collapsed="ApmdExpander_Collapsed" Expanded="ModExpander_Expanded">
+                <Expander x:Name="ModExpander" Collapsed="ApmdExpander_Collapsed">
                     <Expander.Style>
                         <Style TargetType="Expander">
                             <Setter Property="Header" Value="{Binding ModExpanderTitle}" />
