write intermediate files

--- a/GUI/CalibrateTaskWindow.xaml
+++ b/GUI/CalibrateTaskWindow.xaml
@@ -165,6 +165,7 @@
                 <Expander x:Name="CalibrationExpander">
                     <StackPanel>
                         <CheckBox x:Name="nonLinearCalibCheckBox" Content="Non-Linear Calibration" />
+                        <CheckBox x:Name="writeIntermediateFilesCheckBox" Content="Write Intermediate Files" />
                     </StackPanel>
                 </Expander>
             </GroupBox>
