--- a/GUI/SearchTaskWindow.xaml
+++ b/GUI/SearchTaskWindow.xaml
@@ -15,10 +15,22 @@
         <DockPanel>
             <GroupBox Header="File Loading Parameters" DockPanel.Dock="Top">
                 <Expander x:Name="FileLoadExpander" Collapsed="ApmdExpander_Collapsed">
-                    <StackPanel>
-                        <CheckBox x:Name="deconvolutePrecursors" Content="Deconvolute Precursors" IsChecked="True" />
-                        <CheckBox x:Name="useProvidedPrecursor" Content="Use Provided Precursor" IsChecked="True" />
-                    </StackPanel>
+                        <StackPanel>
+                            <CheckBox x:Name="useProvidedPrecursor" Content="Use Provided Precursor" IsChecked="True" />
+                            <CheckBox x:Name="deconvolutePrecursors" Content="Deconvolute Precursors" IsChecked="True" />
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label Content="Decsonvolution Intensity Ratio " />
+                                <TextBox x:Name="DeconvolutionIntensityRatioTextBox" Width="45"/>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label Content="Deconvolution Max Assumed Charge State" />
+                                <TextBox x:Name="DeconvolutionMaxAssumedChargeStateTextBox" Width="45"/>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label Content="Deconvolution Mass Tolerance in PPM" />
+                                <TextBox x:Name="DeconvolutionMassToleranceInPpmTextBox" Width="45"/>
+                            </StackPanel>
+                        </StackPanel>
                 </Expander>
             </GroupBox>
             <GroupBox Header="Search Parameters" DockPanel.Dock="Top">
