--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -129,6 +129,7 @@
                             <Button x:Name="addSearchTaskButton" Content="New Search Task" Click="AddSearchTaskButton_Click" />
                             <Button x:Name="addCalibrateTaskButton" Content="New Calibrate Task" Click="AddCalibrateTaskButton_Click" />
                             <Button x:Name="addGPTMDTaskButton" Content="New GPTMD Task" Click="AddGPTMDTaskButton_Click" />
+                            <Button x:Name="btnAddCrosslinkSearch" Content="New XL Task" Click="btnAddCrosslinkSearch_Click"/>
                         </StackPanel>
                         <TreeView x:Name="tasksTreeView" Grid.Row="1" ItemsSource="{Binding}" MouseDoubleClick="TasksTreeView_MouseDoubleClick">
                             <TreeView.Resources>
