--- a/GUI/SearchTaskWindow.xaml
+++ b/GUI/SearchTaskWindow.xaml
@@ -96,25 +96,28 @@
                                 </StackPanel>
                             </Grid>
                         </GroupBox>
-                        <GroupBox Header="Fragment Ion Search Parameters">
+                        <GroupBox Header="Fragment Ion Search Parameters" HorizontalAlignment="Right" Width="728">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="1*" />
                                     <ColumnDefinition Width="1*" />
                                 </Grid.ColumnDefinitions>
                                 <StackPanel>
-                                    <StackPanel Orientation="Horizontal" Margin="5">
-                                        <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
-                                        <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
-                                        <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
+                                        <StackPanel Orientation="Horizontal" Margin="5">
+                                            <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
+                                            <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
+                                            <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
+                                        </StackPanel>
+                                        <StackPanel Orientation="Horizontal" Margin="10,5,5,5">
+                                            <CheckBox x:Name="addCompIonCheckBox" Content="Generate Complementary Ions" />
+                                        </StackPanel>
                                     </StackPanel>
-                                </StackPanel>
                                 <StackPanel Grid.Column="1">
                                     <StackPanel Orientation="Horizontal" Margin="5">
                                         <Label x:Name="label4" Content="Ions to search" />
                                         <CheckBox x:Name="bCheckBox" Content="b ions" />
                                         <CheckBox x:Name="yCheckBox" Content="y ions" />
-                                    </StackPanel>
+                                        </StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="89,10,-69,10">
                                         <CheckBox x:Name="cCheckBox" Content="c ions" />
                                         <CheckBox x:Name="zdotCheckBox" Content="zdot ions" />
