--- a/GUI/XLSearchTaskWindow.xaml
+++ b/GUI/XLSearchTaskWindow.xaml
@@ -24,14 +24,21 @@
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"/>
                                 <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*"/>
                             </Grid.RowDefinitions>
                             <CheckBox x:Name="ckbSearchWithXLAllBeta" Grid.Row="0" Grid.Column="0" Content="Search with All possible Beta peptides"/>
-                            <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1">
+                                <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1">
+                                    <Label x:Name="lblXLBetaMsTl" Content="Beta Peptide Precusor mass tolerance"/>
+                                    <TextBox x:Name="txtXLBetaPrecusorMsTl" Width="45" IsEnabled="{Binding IsChecked, ElementName=ckbSearchWithXLAllBeta}"/>
+                                    <ComboBox x:Name="cbbXLBetaprecusorMsTl" IsEnabled="{Binding IsChecked, ElementName=ckbSearchWithXLAllBeta}"/>
+                                </StackPanel>
+                            <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0">
                                 <Label x:Name="lblXLprecusorMsTl"  Content="Crosslink Precusor mass tolerance" />
                                 <TextBox x:Name="txtXLPrecusorMsTl" Width="45"/>
                                 <ComboBox x:Name="cbbXLprecusorMsTl" />
                             </StackPanel>
-                            <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0">
+                            <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0">
                                 <Label x:Name="lblCrosslinker" Content="Crosslinker Type" />
                                 <ComboBox x:Name="cbCrosslinker" />
                             </StackPanel>
@@ -124,54 +131,33 @@
                                 </StackPanel>
                             </Grid>
                         </GroupBox>
-                        <GroupBox Header="Fragment Ion Search Parameters">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="1*" />
-                                    <ColumnDefinition Width="1*" />
-                                </Grid.ColumnDefinitions>
-                                <StackPanel>
-                                    <StackPanel Orientation="Horizontal" Margin="5">
-                                        <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
-                                        <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
-                                        <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
+                            <GroupBox Header="Fragment Ion Search Parameters">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="1*" />
+                                        <ColumnDefinition Width="1*" />
+                                    </Grid.ColumnDefinitions>
+                                    <StackPanel>
+                                        <StackPanel Orientation="Horizontal" Margin="5">
+                                            <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
+                                            <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
+                                            <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
+                                        </StackPanel>
                                     </StackPanel>
-                                </StackPanel>
-                                <StackPanel Grid.Column="1">
-                                    <StackPanel Orientation="Horizontal" Margin="5">
-                                        <Label x:Name="label4" Content="Ions to search" />
-                                        <CheckBox x:Name="bCheckBox" Content="b ions" />
-                                        <CheckBox x:Name="yCheckBox" Content="y ions" />
+                                    <StackPanel Grid.Column="1">
+                                        <StackPanel Orientation="Horizontal" Margin="5">
+                                            <Label x:Name="label4" Content="Ions to search" />
+                                            <CheckBox x:Name="bCheckBox" Content="b ions" />
+                                            <CheckBox x:Name="yCheckBox" Content="y ions" />
+                                        </StackPanel>
+                                        <StackPanel Orientation="Horizontal" Margin="89,10,-69,10">
+                                            <CheckBox x:Name="cCheckBox" Content="c ions" />
+                                            <CheckBox x:Name="zdotCheckBox" Content="zdot ions" />
+                                        </StackPanel>
                                     </StackPanel>
-                                    <StackPanel Orientation="Horizontal" Margin="89,10,-69,10">
-                                        <CheckBox x:Name="cCheckBox" Content="c ions" />
-                                        <CheckBox x:Name="zdotCheckBox" Content="zdot ions" />
-                                    </StackPanel>
-                                </StackPanel>
-                            </Grid>
-                        </GroupBox>
-                        <GroupBox Header="Allowed Precursor Mass Differences">
-                            <Expander x:Name="ApmdExpander" Collapsed="ApmdExpander_Collapsed">
-                                <Expander.Style>
-                                    <Style TargetType="Expander">
-                                        <Setter Property="Header" Value="{Binding ExpanderTitle}" />
-                                        <Style.Triggers>
-                                            <Trigger Property="IsExpanded" Value="True">
-                                                <Setter Property="Header" Value="Hide" />
-                                            </Trigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </Expander.Style>
-                                <StackPanel Margin="5">
-                                    <DataGrid x:Name="searchModesDataGrid" ItemsSource="{Binding}" CanUserSortColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False" Height="150" SelectionMode="Single" />
-                                    <StackPanel Orientation="Horizontal" Margin="5">
-                                        <TextBox x:Name="newAllowedPrecursorMassDiffsTextBox"  Width="300" />
-                                        <Button x:Name="addNewAllowedPrecursorMassDiffsButton" Content="Add New Allowed Precursor Mass Diffs" Click="AddNewAllowedPrecursorMassDiffsButton_Click" />
-                                    </StackPanel>
-                                </StackPanel>
-                            </Expander>
-                        </GroupBox>
-                    </StackPanel>
+                                </Grid>
+                            </GroupBox>
+                        </StackPanel>
                 </Expander>
             </GroupBox>
             <GroupBox Header="Modifications" DockPanel.Dock="Top">
