--- a/GUI/SearchTaskWindow.xaml
+++ b/GUI/SearchTaskWindow.xaml
@@ -30,6 +30,7 @@
                                 <Label Content="Deconvolution Mass Tolerance in PPM" />
                                 <TextBox x:Name="DeconvolutionMassToleranceInPpmTextBox" Width="45"/>
                             </StackPanel>
+                            <CheckBox x:Name="disposeOfFilesWhenDone" Content="Dispose of files when done" IsChecked="True" />
                         </StackPanel>
                     </Expander>
                 </GroupBox>
