--- a/GUI/SearchTaskWindow.xaml
+++ b/GUI/SearchTaskWindow.xaml
@@ -157,6 +157,10 @@
                                 <Label x:Name="ff" Content="MaxDegreeOfParallelism" />
                                 <TextBox x:Name="maxDegreesOfParallelism" Width="45" />
                             </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label x:Name="ffdf" Content="Minimum MM score allowed:" />
+                                <TextBox x:Name="minScoreAllowed" Width="45" />
+                            </StackPanel>
                         </StackPanel>
                     </Expander>
                 </GroupBox>
