--- a/GUI/SearchTaskWindow.xaml
+++ b/GUI/SearchTaskWindow.xaml
@@ -168,10 +168,7 @@
                                     </Grid.ColumnDefinitions>
                                     <StackPanel Grid.Column="0">
                                         <StackPanel Orientation="Horizontal" Margin="1">
-                                            <RadioButton x:Name="allAmbiguity" Content="Report All Ambiguity (might be slow)" GroupName="AmbiguityType"  Margin="5" />
-                                        </StackPanel>
-                                        <StackPanel Orientation="Horizontal" Margin="1">
-                                            <RadioButton x:Name="someAmbiguity" Content="Ignore Ambiguity" GroupName="AmbiguityType" Margin="5" />
+                                            <CheckBox x:Name="allAmbiguity" Content="Report All Ambiguity (might be slow)" Margin="5" />
                                         </StackPanel>
                                     </StackPanel>
                                     <StackPanel Grid.Column="1">
